Added ftclib import with rework for uncommon gradle changes, temporarily commented unit test cause its making the build get cooked